# lpr_school_parser

./: .gitignore  pyproject.toml  start.bat
school_parser/: __main__.py
school_parser/models/: __init__.py  leason.py  schedule.py  task.py
tests/: test_school_parser.py
