[tool.poetry]
name = "school_parser"
version = "0.1.0"
description = ""
authors = ["Daniel Zakharov <gzdan734@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
httpx = "^0.22.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
